--- a/src/app/layout/main-header/main-header.component.html
+++ b/src/app/layout/main-header/main-header.component.html
@@ -1,1 +1,4 @@
-<div class="main-header">My South App</div>
+<div class="main-header">
+    My South App
+<div style="float:right" *ngIf="userContext"><a (click)="logout()">logout</a></div>
+</div>
