--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
 @import '~bootstrap/dist/css/bootstrap.css';
 @import '~font-awesome/css/font-awesome.css';
 @import 'assets/css/app.css';
+
+a{
+    cursor: pointer;
+};
